--- a/app/scripts/main/views/main.html
+++ b/app/scripts/main/views/main.html
@@ -1,1 +1,223 @@
-<h1>MAIN PAGE</h1>
+<div class="header">
+      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
+        <div class="container">
+          <div class="navbar-header">
+
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
+              <span class="sr-only">Toggle navigation</span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+              <span class="icon-bar"></span>
+            </button>
+            <!-- dropdown component -->
+            <div class="dropdown" style="margin-left:10px; margin-top:8px;">
+			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+			    Select Language
+			    <span class="caret"></span>
+			  </button>
+			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+			    <li><a href="#">English</a></li>
+			    <li><a href="#">Spanish</a></li>
+			    <li><a href="#">Italian</a></li>
+			  </ul>
+			</div>
+
+          </div>
+
+          <div class="collapse navbar-collapse" id="js-navbar-collapse">
+          <!--
+            <ul class="nav navbar-nav">
+              <li class="active"><a href="#/">Home</a></li>
+              <li><a ng-href="#/about">About</a></li>
+              <li><a ng-href="#/">Contact</a></li>
+            </ul>
+           -->
+          </div>
+        </div>
+      </div>
+</div>
+<div class="sub-header">
+
+</div>
+
+<div class="jobs-table" style="width:100%;margin-top:25px;">
+
+<div style="margin-left:20px;">
+<h2>Jobs</h2>
+</div>
+
+<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="margin-top:10px;">
+        <thead>
+            <tr>
+                <th>Job Id</th>
+                <th>Headline</th>
+                <th>Client</th>
+                <th>Status</th>
+                <th>Type</th>
+                <th>Lang</th>
+                <th>Publish Date</th>
+                <th>Modified</th>
+                <th>Details</th>
+            </tr>
+        </thead>
+ 
+        <tbody>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+                        <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+            <tr>
+                <td>DesignIm8</td>
+                <td>HL</td>
+                <td>MediaStudio</td>
+                <td>New</td>
+                <td>ARC</td>
+                <td>English</td>
+                <td>27-Oct-15</td>
+                <td>26-Oct-15</td>
+                <td></td>
+            </tr>
+
+        </tbody>
+    </table>
+
+</div>
