Add Services for login and main

--- a/app/scripts/main/views/main.html
+++ b/app/scripts/main/views/main.html
@@ -62,161 +62,17 @@
         </thead>
  
         <tbody>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
+            <tr ng-repeat="job in jobs">
+                <td>{{ job.jobId }}</td>
+                <td>{{ job.headline }}</td>
+                <td>{{ job.organizationName }}</td>
+                <td>{{ job.workflowState }}</td>
+                <td>{{ job.jobType }}</td>
+                <td>{{ job.language }}</td>
+                <td>{{ job.firstPublishDate }}</td>
+                <td>{{ job.lastMofifiedDate }}</td>
                 <td></td>
             </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-                        <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-            <tr>
-                <td>DesignIm8</td>
-                <td>HL</td>
-                <td>MediaStudio</td>
-                <td>New</td>
-                <td>ARC</td>
-                <td>English</td>
-                <td>27-Oct-15</td>
-                <td>26-Oct-15</td>
-                <td></td>
-            </tr>
-
         </tbody>
     </table>
 
