--- a/app/scripts/login/views/login.html
+++ b/app/scripts/login/views/login.html
@@ -2,8 +2,8 @@
 <div class="wrapper">
     <form class="form-signin">       
       <h2 class="form-signin-heading">Please login</h2>
-      <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" />
-      <input type="password" class="form-control" name="password" placeholder="Password" required=""/>      
+      <input type="text" class="form-control" name="username" placeholder="Email Address" required="" autofocus="" ng-model="username" />
+      <input type="password" class="form-control" name="password" placeholder="Password" required="" ng-model="password"/>      
       <label class="checkbox">
         <input type="checkbox" value="remember-me" id="rememberMe" name="rememberMe"> Remember me
       </label>
