--- a/app/scripts/orders/views/orders.html
+++ b/app/scripts/orders/views/orders.html
@@ -1,3 +1,8 @@
+<style type="text/css">
+  .red-state{
+    color:red;
+  }
+</style>
 <div class="header">
       <div class="navbar navbar-default navbar-fixed-top" role="navigation">
         <div class="container">
@@ -37,40 +42,56 @@
       </div>
 </div>
 <div class="sub-header">
-
+<div style="margin-top:9px;color:white;font-family:Arial;">
+  <div style="display:inline-block;width:4%;margin-left:25px;">
+    <a href="#/orders" style="text-decoration: none;color:white;">Orders</a>
+  </div>
+  <div style="display:inline-block;width:4%;">
+    <a href="#/jobs" style="text-decoration: none;color:white;">Jobs</a>
+  </div>
+  <div style="display:inline-block;width:7%;">Organization</div>
+  <div style="display:inline-block;width:5%;">Report</div>
+  <div style="display:inline-block;width:5%;">Externals</div>
+  <div style="display:inline-block;width:8%;">Settings</div>
+  <div style="display:inline-block;width:40%;"></div>
+</div>
 </div>
 
 <div class="jobs-table" style="width:100%;margin-top:25px;">
 
 <div style="margin-left:20px;">
-<h2>Jobs</h2>
+<h2>Orders</h2>
 </div>
 
 <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="margin-top:10px;">
         <thead>
             <tr>
-                <th>Job Id</th>
-                <th>Headline</th>
+                <th>Order</th>
+                <th>Title</th>
                 <th>Client</th>
                 <th>Status</th>
                 <th>Type</th>
-                <th>Lang</th>
-                <th>Publish Date</th>
-                <th>Modified</th>
+                <th>Job Number</th>
+                <th>Dist. ED</th>
+                <th>Created</th>
                 <th>Details</th>
             </tr>
         </thead>
  
         <tbody>
-            <tr ng-repeat="job in jobs">
-                <td>{{ job.jobId }}</td>
-                <td>{{ job.headline }}</td>
-                <td>{{ job.organizationName }}</td>
-                <td>{{ job.workflowState }}</td>
-                <td>{{ job.jobType }}</td>
-                <td>{{ job.language }}</td>
-                <td>{{ job.firstPublishDate }}</td>
-                <td>{{ job.lastMofifiedDate }}</td>
+            <tr ng-repeat="order in orders">
+                <td>{{ order.orderNumber }}</td>
+                <td>{{ order.title }}</td>
+                <td>{{ order.clientName }}</td>
+                <td>
+                  <div ng-class="order.workflowState">
+                  {{ order.workflowState }}
+                  </div>
+                </td>
+                <td>{{ order.jobType }}</td>
+                <td>{{ order.jobId }}</td>
+                <td>{{ order.distributionEstimatedDate }}</td>
+                <td>{{ order.creationDate }}</td>
                 <td></td>
             </tr>
         </tbody>
