--- a/app/scripts/jobs/views/jobs.html
+++ b/app/scripts/jobs/views/jobs.html
@@ -1,91 +1,110 @@
-<div class="header">
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
-
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <!-- dropdown component -->
-            <div class="dropdown" style="margin-left:10px; margin-top:8px;">
-			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			    Select Language
-			    <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			    <li><a href="#">English</a></li>
-			    <li><a href="#">Spanish</a></li>
-			    <li><a href="#">Italian</a></li>
-			  </ul>
-			</div>
-
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-          <!--
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-           -->
-          </div>
-        </div>
+<div class="jobs l-background">
+<div class="wrapper">
+    <div class="form-signin">       
+      <div class="black-row">
+        <div class="dropdown position">
+        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+          Select Language
+          <span class="caret"></span>
+        </button>
+        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+          <li><a href="#">English</a></li>
+          <li><a href="#">Spanish</a></li>
+          <li><a href="#">Italian</a></li>
+        </ul>
       </div>
-</div>
-<div class="sub-header">
-<div style="margin-top:9px;color:white;font-family:Arial;">
-  <div style="display:inline-block;width:4%;margin-left:25px;">
-    <a href="#/orders" style="text-decoration: none;color:white;">Orders</a>
+      <div class="nav-right">
+        <div class="item">admin: PR Newswire |</div> 
+        <div class="item">preferences |</div>
+        <div class="item">0 New Message |</div>
+        <div class="item">logout</div>
+      </div>
+      </div>
+      <div class="blue-row color">
+          <div class="nav">
+            <div class="order-item">
+              <a href="#/orders" class="text">Orders</a>
+            </div>
+            <div class="jobs-item">
+              <a href="#/jobs" class="text">Jobs</a>
+            </div>
+            <div class="organization-item">Organization</div>
+            <div class="report-item">Report</div>
+            <div class="external-item">Externals</div>
+            <div class="settings-item">Settings</div>
+            <div class="other-item"></div>
+          </div>
+          </div>
+
+
+        <div class="jobs-table">
+
+        <div class="title">
+        <h2>Jobs</h2>
+        </div>
+
+        <div class="header-filter">
+                  <div class="title-filter">Filters: </div>
+                  <div class="dropdown dropdown-position">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Select Filter
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="#">Filter 1</a></li>
+                      <li><a href="#">Filter 2</a></li>
+                      <li><a href="#">Filter 3</a></li>
+                    </ul>
+                  </div>
+                  <div class="title-contains">contains</div>
+                  <div class="input">
+                    <input type="text" class="form-control input-text" />
+                  </div>
+        </div>
+
+        <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="">
+                <thead class="thead">
+                    <tr>
+                        <th>Job Id</th>
+                        <th>Headline</th>
+                        <th>Client</th>
+                        <th>Status</th>
+                        <th>Type</th>
+                        <th>Lang</th>
+                        <th>Publish Date</th>
+                        <th>Modified</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+         
+                <tbody class="tbody">
+                    <tr ng-repeat="job in jobs">
+                        <td>{{ job.jobId }}</td>
+                        <td>{{ job.headline }}</td>
+                        <td>{{ job.organizationName }}</td>
+                        <td>
+                          <div ng-class="{'state-published': job.workflowState==='Published/Pending'}">{{ job.workflowState }}</div>
+                        </td>
+                        <td>{{ job.jobType }}</td>
+                        <td>{{ job.language }}</td>
+                        <td>{{ job.firstPublishDate }}</td>
+                        <td>{{ job.lastMofifiedDate }}</td>
+                        <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        <div class="btn btn-lg btn-primary btn-block btn-job" type="submit" ng-click="login()">Create Job</div>  
+        </div>
+
+
+      <div class="l-footer">
+        <div class="box1">800-653-5313</div>
+        <div class="box2">multivureports@multivu.com</div>
+        <div class="box3">www.multivu.com</div>
+        <div class="box4">MultiVu Inc., 2015</div>
+      </div>
   </div>
-  <div style="display:inline-block;width:4%;">
-    <a href="#/jobs" style="text-decoration: none;color:white;">Jobs</a>
-  </div>
-  <div style="display:inline-block;width:7%;">Organization</div>
-  <div style="display:inline-block;width:5%;">Report</div>
-  <div style="display:inline-block;width:5%;">Externals</div>
-  <div style="display:inline-block;width:8%;">Settings</div>
-  <div style="display:inline-block;width:40%;"></div>
+
 </div>
-</div>
-
-<div class="jobs-table" style="width:100%;margin-top:25px;">
-
-<div style="margin-left:20px;">
-<h2>Jobs</h2>
-</div>
-
-<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="margin-top:10px;">
-        <thead>
-            <tr>
-                <th>Job Id</th>
-                <th>Headline</th>
-                <th>Client</th>
-                <th>Status</th>
-                <th>Type</th>
-                <th>Lang</th>
-                <th>Publish Date</th>
-                <th>Modified</th>
-                <th>Details</th>
-            </tr>
-        </thead>
- 
-        <tbody>
-            <tr ng-repeat="job in jobs">
-                <td>{{ job.jobId }}</td>
-                <td>{{ job.headline }}</td>
-                <td>{{ job.organizationName }}</td>
-                <td>{{ job.workflowState }}</td>
-                <td>{{ job.jobType }}</td>
-                <td>{{ job.language }}</td>
-                <td>{{ job.firstPublishDate }}</td>
-                <td>{{ job.lastMofifiedDate }}</td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
-
 </div>
