--- a/app/scripts/jobs/views/jobs.html
+++ b/app/scripts/jobs/views/jobs.html
@@ -1,42 +1,7 @@
 <div class="jobs l-background">
 <div class="wrapper">
-    <div class="form-signin">       
-      <div class="black-row">
-        <div class="dropdown position">
-        <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-          Select Language
-          <span class="caret"></span>
-        </button>
-        <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-          <li><a href="#">English</a></li>
-          <li><a href="#">Spanish</a></li>
-          <li><a href="#">Italian</a></li>
-        </ul>
-      </div>
-      <div class="nav-right">
-        <div class="item">admin: PR Newswire |</div> 
-        <div class="item">preferences |</div>
-        <div class="item">0 New Message |</div>
-        <div class="item">logout</div>
-      </div>
-      </div>
-      <div class="blue-row color">
-          <div class="nav">
-            <div class="order-item">
-              <a href="#/orders" class="text">Orders</a>
-            </div>
-            <div class="jobs-item">
-              <a href="#/jobs" class="text">Jobs</a>
-            </div>
-            <div class="organization-item">Organization</div>
-            <div class="report-item">Report</div>
-            <div class="external-item">Externals</div>
-            <div class="settings-item">Settings</div>
-            <div class="other-item"></div>
-          </div>
-          </div>
-
-
+    <div class="form-signin">  
+    <div ng-include="'../scripts/partial/header.html'"></div>
         <div class="jobs-table">
 
         <div class="title">
@@ -97,13 +62,7 @@
         <div class="btn btn-lg btn-primary btn-block btn-job" type="submit" ng-click="login()">Create Job</div>  
         </div>
 
-
-      <div class="l-footer">
-        <div class="box1">800-653-5313</div>
-        <div class="box2">multivureports@multivu.com</div>
-        <div class="box3">www.multivu.com</div>
-        <div class="box4">MultiVu Inc., 2015</div>
-      </div>
+  <div ng-include="'../scripts/partial/footer.html'"></div>
   </div>
 
 </div>
