--- a/app/scripts/orders/views/orders.html
+++ b/app/scripts/orders/views/orders.html
@@ -1,100 +1,69 @@
-<style type="text/css">
-  .red-state{
-    color:red;
-  }
-</style>
-<div class="header">
-      <div class="navbar navbar-default navbar-fixed-top" role="navigation">
-        <div class="container">
-          <div class="navbar-header">
+<div class="orders l-background">
+<div class="wrapper">
+    <div class="form-signin">  
+    <div ng-include="'../scripts/partial/header.html'"></div>
+        <div class="jobs-table">
 
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#js-navbar-collapse">
-              <span class="sr-only">Toggle navigation</span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-              <span class="icon-bar"></span>
-            </button>
-            <!-- dropdown component -->
-            <div class="dropdown" style="margin-left:10px; margin-top:8px;">
-			  <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
-			    Select Language
-			    <span class="caret"></span>
-			  </button>
-			  <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
-			    <li><a href="#">English</a></li>
-			    <li><a href="#">Spanish</a></li>
-			    <li><a href="#">Italian</a></li>
-			  </ul>
-			</div>
-
-          </div>
-
-          <div class="collapse navbar-collapse" id="js-navbar-collapse">
-          <!--
-            <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
-            </ul>
-           -->
-          </div>
+        <div class="title">
+        <h2>Orders</h2>
         </div>
-      </div>
-</div>
-<div class="sub-header">
-<div style="margin-top:9px;color:white;font-family:Arial;">
-  <div style="display:inline-block;width:4%;margin-left:25px;">
-    <a href="#/orders" style="text-decoration: none;color:white;">Orders</a>
-  </div>
-  <div style="display:inline-block;width:4%;">
-    <a href="#/jobs" style="text-decoration: none;color:white;">Jobs</a>
-  </div>
-  <div style="display:inline-block;width:7%;">Organization</div>
-  <div style="display:inline-block;width:5%;">Report</div>
-  <div style="display:inline-block;width:5%;">Externals</div>
-  <div style="display:inline-block;width:8%;">Settings</div>
-  <div style="display:inline-block;width:40%;"></div>
-</div>
-</div>
 
-<div class="jobs-table" style="width:100%;margin-top:25px;">
-
-<div style="margin-left:20px;">
-<h2>Orders</h2>
-</div>
-
-<table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="margin-top:10px;">
-        <thead>
-            <tr>
-                <th>Order</th>
-                <th>Title</th>
-                <th>Client</th>
-                <th>Status</th>
-                <th>Type</th>
-                <th>Job Number</th>
-                <th>Dist. ED</th>
-                <th>Created</th>
-                <th>Details</th>
-            </tr>
-        </thead>
- 
-        <tbody>
-            <tr ng-repeat="order in orders">
-                <td>{{ order.orderNumber }}</td>
-                <td>{{ order.title }}</td>
-                <td>{{ order.clientName }}</td>
-                <td>
-                  <div ng-class="order.workflowState">
-                  {{ order.workflowState }}
+        <div class="header-filter">
+                  <div class="title-filter">Filters: </div>
+                  <div class="dropdown dropdown-position">
+                    <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+                      Select Filter
+                      <span class="caret"></span>
+                    </button>
+                    <ul class="dropdown-menu" aria-labelledby="dropdownMenu1">
+                      <li><a href="#">Filter 1</a></li>
+                      <li><a href="#">Filter 2</a></li>
+                      <li><a href="#">Filter 3</a></li>
+                    </ul>
                   </div>
-                </td>
-                <td>{{ order.jobType }}</td>
-                <td>{{ order.jobId }}</td>
-                <td>{{ order.distributionEstimatedDate }}</td>
-                <td>{{ order.creationDate }}</td>
-                <td></td>
-            </tr>
-        </tbody>
-    </table>
+                  <div class="title-contains">contains</div>
+                  <div class="input">
+                    <input type="text" class="form-control input-text" />
+                  </div>
+        </div>
 
+        <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="">
+                <thead class="thead">
+                    <tr>
+                        <th>Order</th>
+                        <th>Title</th>
+                        <th>Client</th>
+                        <th>Status</th>
+                        <th>Type</th>
+                        <th>Job Number</th>
+                        <th>Dist. ED</th>
+                        <th>Created</th>
+                        <th>Details</th>
+                    </tr>
+                </thead>
+         
+                <tbody class="tbody">
+                    <tr ng-repeat="order in orders">
+                            <td>{{ order.orderNumber }}</td>
+                    <td>{{ order.title }}</td>
+                    <td>{{ order.clientName }}</td>
+                    <td>
+                      <div ng-class="{'state-published': order.workflowState==='Published/Pending'}">{{ order.workflowState }}</div>
+                    </td>
+                    <td>{{ order.jobType }}</td>
+                    <td>{{ order.jobId }}</td>
+                    <td>{{ order.distributionEstimatedDate }}</td>
+                    <td>{{ order.creationDate }}</td>
+                    <td></td>
+                    </tr>
+                </tbody>
+            </table>
+
+        <div class="btn btn-lg btn-primary btn-block btn-job" type="submit" ng-click="login()">Create Order</div>  
+        </div>
+
+  <div ng-include="'../scripts/partial/footer.html'"></div>
+  </div>
+
+</div>
 </div>
