--- a/app/scripts/login/views/login.html
+++ b/app/scripts/login/views/login.html
@@ -13,12 +13,12 @@
           </label>
           <div class="btn btn-lg btn-primary btn-block" type="submit" ng-click="login()">Login</div>  
           <div class="mg-10">
-            <a href="#/recoverpass?evt=forget" class="link-color">
+            <a href="#/recoverpass" class="link-color">
             Did you forget your password?
             </a>
           </div>
           <div class="mg-10 mg-60" >
-            <a href="#/recoverpass?evt=unlock" class="link-color">
+            <a href="#/recoverpass" class="link-color">
               Unlock your account
             </a>
           </div>
