Add form layout

--- a/app/scripts/form/views/form.html
+++ b/app/scripts/form/views/form.html
@@ -1,72 +1,145 @@
-<h1>FORM</h1>
+<div class="form l-background">
+<div class="wrapper">
+    <div class="form-signin">  
+    <div ng-include="'../scripts/partial/header.html'"></div>
+        <div class="jobs-table">
 
-<form>
-     <div>
-     	<input type="text" class="form-control general-input-att mg-30" name="client" placeholder="Client" required="" ng-model="model.client" 
+        <div class="title">
+        <h2>Create New Order</h2>
+        </div>
+
+        <form >
+
+    <div  style="background-color: #DEDEDE;
+    display: inline-block;
+    width: 90%;
+    margin-left: 45px;
+    margin-top: 20px;
+    padding: 30px;">
+     <div style="padding: 10px;">
+          <input type="text" class="form-control general-input-att mg-30" name="client" placeholder="Client" required="" ng-model="model.client" 
+           style="
+    padding: 10px;
+"/>
+     </div>
+     <div style="padding: 10px;">
+          <textarea id="contactTxtArea" placeholder="Contact" cols="40" rows="5" ng-model="model.contact" style="color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;"></textarea>
+     </div>
+     <div style="padding: 10px;">
+          <input type="text" class="form-control general-input-att mg-30" name="orderNumber" placeholder="Order Number" required="" ng-model="model.orderNumber"
            />
      </div>
-     <div>
-     	<textarea cols="40" rows="5" name="contact" ng-model="model.contact"></textarea>
-     </div>
-     <div>
-     	<input type="text" class="form-control general-input-att mg-30" name="orderNumber" placeholder="Order Number" required="" ng-model="model.orderNumber" 
+          <div style="padding: 10px;">
+          <input type="text" class="form-control general-input-att mg-30" name="jobNumber" placeholder="Job Number" required="" ng-model="model.jobNumber" style="
+    padding: 10px;
+"
            />
      </div>
-          <div>
-     	<input type="text" class="form-control general-input-att mg-30" name="jobNumber" placeholder="Job Number" required="" ng-model="model.jobNumber" 
+     <div style="padding: 10px;">
+          <select ng-model="model.jobType" name="jobtype" style="color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+                <option value="" disabled selected>Select Job Type</option>
+                <option value="ARC">ARC</option>
+          </select>
+     </div>
+     <div style="padding: 10px;">
+          <input type="text" class="form-control general-input-att mg-30" name="title" placeholder="Title" required="" ng-model="model.title" 
            />
      </div>
-     <div>
-     	<select ng-model="model.jobType" name="jobtype">
-     		 <option value="ARC">ARC</option>
-     	</select>
-     </div>
-               <div>
-     	<input type="text" class="form-control general-input-att mg-30" name="title" placeholder="Title" required="" ng-model="model.title" 
-           />
-     </div>
 
-          <div>
-     	<select ng-model="model.template" name="template">
-     		 <option value="Left Body Player">Left Body Player</option>
-     	</select>
+          <div style="padding: 10px;">
+          <select ng-model="model.template" name="template" style="color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+                <option value="" disabled selected>Select Template</option>
+                <option value="Left Body Player">Left Body Player</option>
+          </select>
      </div>
 
-          <div>
-     	<textarea cols="40" rows="5" name="instructions" ng-model="model.instructions"></textarea>
+          <div style="padding: 10px;">
+          <textarea id="instructionsTxtArea" cols="40" rows="5" name="instructions" ng-model="model.instructions" placeholder="Instructions" style="color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;"></textarea>
      </div>
 
-          <div>
-     	<select ng-model="model.year" name="year">
-     		 <option value="2015">2015</option>
-			  <option value="2013">2014</option>
-     	</select>
-     	     	<select ng-model="model.month" name="month">
-     		 <option value="1">1</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-     	</select>
-     	     	     	<select ng-model="model.day" name="day">
-     		 <option value="1">1</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-     	</select>
-     	     	     	     	<select ng-model="model.hour" name="hour">
-     		 <option value="1">1</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-     	</select>
+          <div style="padding: 10px;">
+          <select ng-model="model.year" name="year" style="    color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+               <option value="" disabled selected>Select Year</option>
+                <option value="2015">2015</option>
+                 <option value="2013">2014</option>
+          </select>
+                    <select ng-model="model.month" name="month" placeholder="Month" style="    color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+               <option value="" disabled selected>Select Month</option>
+                <option value="1">1</option>
+                 <option value="2">2</option>
+                 <option value="3">3</option>
+                 <option value="4">4</option>
+          </select>
+                              <select ng-model="model.day" name="day" style="    color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+               <option value="" disabled selected>Select Day</option>
+                <option value="1">1</option>
+                 <option value="2">2</option>
+                 <option value="3">3</option>
+                 <option value="4">4</option>
+          </select>
+                                        <select ng-model="model.hour" name="hour" style="    color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+               <option value="" disabled selected>Select Hours</option>
+                <option value="1">1</option>
+                 <option value="2">2</option>
+                 <option value="3">3</option>
+                 <option value="4">4</option>
+          </select>
 
-     	     	     	     	     	<select ng-model="model.minute" name="minute">
-     		 <option value="1">1</option>
-			  <option value="2">2</option>
-			  <option value="3">3</option>
-			  <option value="4">4</option>
-     	</select>
+                                                  <select ng-model="model.minute" name="minute" style="    color: #ADADAD;
+    font-size: inherit;
+    background-color: white;
+    font-family: inherit;
+    font-weight: normal;">
+               <option value="" disabled selected>Select Minutes</option>
+                <option value="1">1</option>
+                 <option value="2">2</option>
+                 <option value="3">3</option>
+                 <option value="4">4</option>
+          </select>
+     </div>
      </div>
 
-	 <div class="btn btn-lg btn-primary btn-block" type="submit" ng-click="saveOrder()">Save Order</div>
+     <div style="background-color:transparent;margin-left:25px;">
+      <div class="btn btn-lg btn-primary btn-block btn-job" type="submit" ng-click="saveOrder()">Save</div>
+      <a class="btn btn-lg btn-primary btn-block btn-job" href="#/orders">Back To List</a>  
+     </div>
 </form>
+        </div>
+
+  <div ng-include="'../scripts/partial/footer.html'"></div>
+  </div>
+
+</div>
+</div>
