--- a/app/scripts/orders/views/orders.html
+++ b/app/scripts/orders/views/orders.html
@@ -59,7 +59,7 @@
                 </tbody>
             </table>
 
-        <div class="btn btn-lg btn-primary btn-block btn-job" type="submit" ng-click="login()">Create Order</div>  
+        <a class="btn btn-lg btn-primary btn-block btn-job" href="#/form">Create Order</a>  
         </div>
 
   <div ng-include="'../scripts/partial/footer.html'"></div>
