add filter feature for jobs and orders

--- a/app/styles/jobs.scss
+++ b/app/styles/jobs.scss
@@ -148,10 +148,11 @@
   			}
 
   			.dropdown-position{
+          height:40px !important;
   				margin-left:10px;
   				display:inline-block;
   				float:left;
-  				margin-top:3px;
+  				margin-top:12px;
   			}
 
   			.title-contains{
