--- a/app/scripts/orders/views/orders.html
+++ b/app/scripts/orders/views/orders.html
@@ -10,6 +10,12 @@
 
         <div class="header-filter">
                   <div class="title-filter">Filters: </div>
+                  <select class="dropdown dropdown-position" ng-model="dropdownItm">
+                    <option value="jobId">Job Id</option>
+                    <option value="headline">HeadLine</option>
+                    <option value="client">Client</option>
+                  </select>
+                  <!--
                   <div class="dropdown dropdown-position">
                     <button class="btn btn-default dropdown-toggle" type="button" id="dropdownMenu1" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
                       Select Filter
@@ -20,11 +26,12 @@
                       <li><a href="#">Filter 2</a></li>
                       <li><a href="#">Filter 3</a></li>
                     </ul>
-                  </div>
+                  </div>-->
                   <div class="title-contains">contains</div>
                   <div class="input">
-                    <input type="text" class="form-control input-text" />
+                    <input type="text" class="form-control input-text" ng-model="searchText"/>
                   </div>
+                   <div style="background-color: #2D669F !important;display: inline-block;width: 100px;height: 30px;margin-left: 15px;margin-top: 6px;line-height: 2;padding-left: 25px;color: white;border-radius: 5px;" ng-click="search()">Search</div>
         </div>
 
         <table id="example" class="table table-striped table-bordered" cellspacing="0" width="100%" style="">
